Fix up spacing of cards and default text

--- a/hlx_statics/styles.css
+++ b/hlx_statics/styles.css
@@ -256,3 +256,20 @@ main div.api-browser-container h2 {
 	font-weight: 700;
 	line-height: 36.4px;
 }
+
+main div h3 {
+  color: #2c2c2c;
+  font-weight: 700;
+  font-size: 22px;
+  line-height: 33px;
+  text-align: center;
+} 
+
+main div p {
+  color: #4b4b4b;
+  line-height: 24px;
+  font-size: 16px;
+  text-align: center;
+  padding-bottom: 32px;
+} 
+
